# story-craft

./: .gitignore  .gitlab-ci.yml  Dockerfile  README.md  deploy.sh  pyproject.toml
app/: main.py
app/services/story_craft/: service.py
